# Honeypot

./: .env  .env.example  .gitignore  CSV  README.md  api_football.py  app.py  apply_recovery.py  ascii_frames_all.txt  buscar_liga_europa.py  calibrar_modelo.py  calibrate.py  check.py  clean_ascii.py  criar_tabelas.py  dashboard.py  debug_exposicao.py  debug_fail.py  debug_hoje.py  fix_calibrate.py  fix_calibrate_outcome.py  iniciar_bot.bat  main.py  oddspapi.py  picks_log.py  pyproject.toml  pyrightconfig.json  recovery_outcomes.py  requirements.txt  scheduler.py  settlement_fallback.py  testar_resultado.py  tune.py  update_log.txt  ver_pendentes.py  ver_schema.py  verificar_jogos_hoje.py
.github/: pull_request_template.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
bot/: telegram_bot.py
data/: atualizar_stats.py  banca_estado.json  calibracao_ligas.json  calibracao_prob.json  clv_brier.py  coletar_odds.py  dashboard_validacao.py  database.py  edge_protocol.db  exportar_excel.py  forma_recente.py  historico_BRA1.csv  historico_D1.csv  historico_E0.csv  historico_F1.csv  historico_I1.csv  historico_SP1.csv  ingestion_resilience.py  janela_monitoramento.py  kelly_banca.py  medias_gols.json  oddspapi_usage.json  picks_log.csv  picks_log_backup_pre_recovery.csv  quality_prior.py  quality_telemetry.py  recovery_audit.json  sos_ajuste.py  steam_monitor.py  verificar_resultados.py  xg_dados.json  xg_understat.py
logs/: README.txt  bot_apostas.xlsx  calibrar_modelo_run_output.txt  (+15 more)
(+212 files in other folders)
