[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-protocol"
version = "0.1.0"
description = "Edge Protocol runtime and analytics services"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "model*", "bot*", "services*"]
